<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoasObjetos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24">
            </Button>
            <TextView
                style="@style/texto"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/objeto">
            </TextView>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_assessment_24">

            </Button>
        </LinearLayout>

        <LinearLayout
            style="@style/lista_objetos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/bob_pendurado" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    style="@style/texto_objeto"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_ficar"
                    android:layout_gravity="center">
                </TextView>

                <TextView
                    style="@style/texto_objeto_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_relaxa"
                    android:layout_gravity="center">
                </TextView>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_forward_ios_24">

            </Button>
        </LinearLayout>

        <LinearLayout
            style="@style/lista_objetos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/bob_pendurado" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/texto_objeto"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_foca"></TextView>

                <TextView
                    style="@style/texto_objeto_sub"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_aumentar"
                    android:layout_gravity="center">
                </TextView>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_forward_ios_24">

            </Button>
        </LinearLayout>

        <LinearLayout
            style="@style/lista_objetos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/bob_pendurado" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    style="@style/texto_objeto"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_dormir"
                    android:layout_gravity="center">
                </TextView>

                <TextView
                    style="@style/texto_objeto_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objeto_melhor"
                    android:layout_gravity="center">
                </TextView>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_forward_ios_24">

            </Button>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>